--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="heart">❤️</div>
     </div>
     <div class="love-links">
-       <img src="imagen.jpg" alt="Descripción de la imagen "width="200">
+       <img src="imagenes/imagen.jpg" alt="Descripción de la imagen">
         <a href="https://vm.tiktok.com/ZMktYgMr7/" target="_blank">Video de Amor 1 🎥</a>
         <a href="https://vm.tiktok.com/ZMktYTDdN/" target="_blank">Video de Amor 2 🎥</a>
         <a href="https://vm.tiktok.com/ZMktYG91X/" target="_blank">Video de Amor 3 🎥</a>
