--- a/barbacoa.html
+++ b/barbacoa.html
@@ -29,7 +29,7 @@
     <div class="grid">
       <!-- Producto 1 -->
       <div class="card">
-        <div class="img"><img src="barbacoa1.jpg" alt="Barbacoa por kilo" /></div>
+     <img src="barbacoa.jpg" alt="barbacoa.jpg" class="imagen" />
         <div class="body">
           <h3>Barbacoa por kilo</h3>
           <p><span class="tag">Barbacoa</span> <span class="price">$420 / kg</span></p>
@@ -44,7 +44,7 @@
 
       <!-- Producto 2 -->
       <div class="card">
-        <div class="img"><img src="taco-barbacoa.jpg" alt="Taco de barbacoa" /></div>
+      <img src="tacob.jpg" alt="tacob.jpg" class="imagen" />
         <div class="body">
           <h3>Taco de barbacoa</h3>
           <p><span class="tag">Barbacoa</span> <span class="price">$15 c/u</span></p>
@@ -59,7 +59,7 @@
 
       <!-- Producto 3 -->
       <div class="card">
-        <div class="img"><img src="torta-barbacoa.jpg" alt="Torta de barbacoa" /></div>
+      <img src="torta.png" alt="torta.png" class="imagen" />
         <div class="body">
           <h3>Torta de barbacoa</h3>
           <p><span class="tag">Barbacoa</span> <span class="price">$40.00</span></p>
