--- a/cenaduria.html
+++ b/cenaduria.html
@@ -34,7 +34,7 @@
 
       <!-- Pozole -->
       <div class="card">
-        <img src="pozole.jpg" alt="pozole.jpg" class="imagen" />
+      <img src="pozole.jpg" alt="pozole.jpg" class="imagen" />
         <div class="body">
           <h3>Pozole</h3>
           <p><span class="tag">Cenaduría</span> <span class="price">$95 / litro</span></p>
@@ -84,7 +84,7 @@
 
       <!-- Enchiladas -->
       <div class="card">
-        <div class="img"><img src="enchiladas.jpg" alt="Enchiladas" /></div>
+       <img src="enchiladas.jpg" alt="enchiladas.jpg" class="imagen" />
         <div class="body">
           <h3>Enchiladas</h3>
           <p><span class="tag">Cenaduría</span> <span class="price">$70</span></p>
@@ -133,7 +133,7 @@
 
       <!-- Tostadas -->
       <div class="card">
-        <div class="img"><img src="tostadas.jpg" alt="Tostadas" /></div>
+       <img src="tostadas.jpg" alt="tostadas.jpg" class="imagen" />
         <div class="body">
           <h3>Tostadas</h3>
           <p><span class="tag">Cenaduría</span> <span class="price">$60</span></p>
